test_next-20170717/20170717133034/build/defconfig/build_20170717133034_log.txt
test_build: Mon Jul 17 13:32:45 PDT 2017: started on defconfig test_next-20170717 (964bcc1b4f57028d56dace7d9bc5924f2eb43f36)
test_build: Mon Jul 17 13:32:45 PDT 2017: serial is 20170717133034
arch/arm64/Makefile:23: ld does not support --fix-cortex-a53-843419; kernel may be susceptible to erratum
arch/arm64/Makefile:44: Detected assembler with broken .inst; disassembly will be unreliable
arch/arm64/kernel/acpi.c:98:14: error: conflicting types for ‘__acpi_map_table’
 char *__init __acpi_map_table(unsigned long phys, unsigned long size)
              ^
In file included from arch/arm64/kernel/acpi.c:18:0:
./include/linux/acpi.h:231:15: note: previous declaration of ‘__acpi_map_table’ was here
 void __iomem *__acpi_map_table(unsigned long phys_addr, unsigned long size);
               ^
arch/arm64/kernel/acpi.c:106:13: error: conflicting types for ‘__acpi_unmap_table’
 void __init __acpi_unmap_table(char *map, unsigned long size)
             ^
In file included from arch/arm64/kernel/acpi.c:18:0:
./include/linux/acpi.h:232:6: note: previous declaration of ‘__acpi_unmap_table’ was here
 void __acpi_unmap_table(void __iomem *map, unsigned long size);
      ^
make[1]: *** [arch/arm64/kernel/acpi.o] Error 1
make: *** [arch/arm64/kernel] Error 2
make: *** Waiting for unfinished jobs....
test_build: Mon Jul 17 13:34:34 PDT 2017: FAILED on defconfig test_next-20170717
test_build: Mon Jul 17 13:34:34 PDT 2017: ended on defconfig test_next-20170717
